--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ document.addEventListener('DOMContentLoaded', function() {
     'use strict';
 
     // --- CONFIGURAÇÃO SUPABASE ---
-    const SUPABASE_URL = '';
-    const SUPABASE_ANON_KEY = '';
+    const SUPABASE_URL = 'https://qldxyvyrafiiqfgxytab.supabase.co';
+    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFsZHh5dnlyYWZpaXFmZ3h5dGFiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU5NTc2MzksImV4cCI6MjA3MTUzMzYzOX0.x6rFKRkfJjgkBLVA8tc5FESxM0KwzrkQRG-8qox0HqM';
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // --- DADOS LOCAIS (Para sugestões) ---
@@ -589,3 +589,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
